# rynxs-agentos

./: .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DETERMINISM_PROOF.md  EVOLUTION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TEST.md  pass.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: determinism.yml  docker-publish.yml
agent-runtime/: Dockerfile  requirements.txt
agent-runtime/universe_agent/: models.py  policy.py  runtime.py  workspace.py
agent-runtime/workspace/: audit.jsonl
base/: kustomization.yaml
cli/: __init__.py  main.py
cli/commands/: checkpoint.py  log.py  replay.py
config/: agent.json
crds/: kustomization.yaml  universe.ai_agents.yaml  universe.ai_messages.yaml  universe.ai_metrics.yaml  universe.ai_sessions.yaml  universe.ai_tasks.yaml  universe.ai_teams.yaml  universe.ai_universes.yaml
dashboard/: README.md
dashboard/public/: app.js  index.html
deploy/dashboard/: deployment.yaml
docker/: compose.local.yml
docs/: API_REFERENCE.md  BENCH.md  CLI.md  DEPLOYMENT.md  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  GITHUB_ISSUES_HOWTO.md  MARKETING_PLATFORM_SRE.md  MARKETING_SECURITY_FIRST.md  MARKETING_SUMMARY.md  MILESTONES.md  MILESTONE_CHANGELOG.md  PR1_SUMMARY.md  PRIMER.md  PRODUCTION_CHECKLIST.md  PROMETHEUS_ALERTS.md  RBAC.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_SIGNOFF.md  S3_BUCKET_POLICY.md  S3_STORE.md  TAGLINE_3BULLETS.md  TASK_SYSTEM.md  THREAT_MODEL.md  TROUBLESHOOTING.md  architecture.md  audit-schema.md  audit.md  crds.md  determinism-checklist.md  hash-versioning.md  medium-story.md  phase-2.md  proof.md  release-checklist.md  release-notes-v1.0.0.md  security.md  universe-model.md
docs/examples/: agent.yaml  task.yaml  universe.yaml  values-prod.yaml  values-staging.yaml
docs/issues/: M1-deterministic-core.md  (+4 more)
engine/: README.md  __init__.py  query.py
examples/: agent-with-roles-example.yaml  message-example.yaml  metrics-example.yaml  team-example.yaml
operator/: Dockerfile  requirements.txt
proof/: audit.sample.jsonl  kubectl-get-jobs.txt  outbox.sample.jsonl
scripts/: bench_event_append.sh  bench_replay.sh  determinism_gate.sh  e2e-ha-failover.sh  e2e-s3-minio.sh  engine_cli.sh  helm_template_sanity.sh  smoke_cli.sh  stress-test-api-failure.sh  stress-test-high-event-rate.sh
(+118 files in other folders)
