[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rynxs-engine"
version = "0.1.0"
description = "Deterministic execution engine for replayable, verifiable, audit-ready AI workloads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rynxs Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
checkpoint = [
    "cryptography>=41.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
operator = [
    "kopf>=1.37.0",
    "kubernetes>=28.0.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
]

[project.scripts]
rynxs = "cli.main:main"

[tool.setuptools]
packages = ["engine", "engine.core", "engine.log", "engine.checkpoint", "engine.replay", "engine.tests", "cli", "cli.commands"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.coverage.run]
source = ["engine"]
omit = ["engine/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
